backend/src/main/java/com/example/backend/controller/error/exception/UnauthorizedException.java
package com.example.backend.controller.error.exception;

public class UnauthorizedException extends RuntimeException {

}
